--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Yixin Chen / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Yixin Chen"
-description              : &description "personal description"
+description              : &description "Dedicated as a researcher and strong as an athlete"
 url                      : https://YixinChen-sde.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "YixinChen-sde/YixinChen-sde.github.io"
@@ -22,22 +22,22 @@ repository               : "YixinChen-sde/YixinChen-sde.github.io"
 author:
   # Biographic information
   avatar           : "self-pic.png"
-  name             : "Your Sidebar Name"
+  name             : "Yixin Chen"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Shenzhen, China"
+  employer         : 
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "yixinchen2023@u.northwestern.edu" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  arxiv            : 
+  googlescholar    : 
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  orcid            : 
+  semantic         : 
+  pubmed           : 
+  researchgate     : 
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
